(CDAP-15715) Change system services to use SSL
- Change default to use SSL